# MC970-Gomoku

./: .gitignore  CMakeLists.txt  README.md  game.cpp  player.cpp
copia_codepen/: bot.js  styles.scss
src/: game.cpp  hashing.cpp  hashing.h  header.h  main.cpp  play_vs_computer.cpp  player.cpp  player.h  player_parallel.cpp  time_exec.sh  time_exec2.sh  timming.cpp
src/players/: player_parallel_eval.cpp  player_parallel_full.cpp  player_parallel_hashing.cpp  player_parallel_minimax.cpp  player_parallel_regex.cpp  player_parallel_scores.cpp  player_serial.cpp  player_serial_hashing.cpp
